syntax = "proto3";

package hippoai.later;

option go_package = "github.com/hippoai/later/_proto";

import "google/api/annotations.proto";

service Mutations {
  rpc AbortInstances(AbortInstancesInput) returns (AbortInstancesOutput) {
    option (google.api.http) = {
      post: "/abort_instances"
      body: "*"
    };
  };
  rpc CreateInstance(CreateInstanceInput) returns (CreateInstanceOutput) {
    option (google.api.http) = {
      post: "/create_instances"
      body: "*"
    };
  };
  rpc GetInstances(GetInstancesInput) returns (GetInstancesOutput) {
    option (google.api.http) = {
      post: "/get_instances"
      body: "*"
    };
  };
  rpc GetLastPullTime(GetLastPullTimeInput) returns (GetLastPullTimeOutput) {
    option (google.api.http) = {
      post: "/get_last_pull_time"
      body: "*"
    };
  };
  rpc SetLastPullTime(SetLastPullTimeInput) returns (SetLastPullTimeOutput) {
    option (google.api.http) = {
      post: "/set_last_pull_time"
      body: "*"
    };
  };
}

message AbortInstancesInput {
  string token = 1;
  string task_name = 2;
  bytes parameters = 3;
}

message AbortInstancesOutput {
  repeated string instances_ids = 1;
  Error error = 2;
}

message CreateInstanceInput {
  string token = 1;
  string task_name = 2;
  string execution_time = 3;
  bytes parameters = 4;
}

message CreateInstanceOutput {
  string instance_id = 1;
  Error error = 2;
}

message GetInstancesInput {
  string token = 1;
  string start = 2;
  string end = 3;
}

message GetInstancesOutput {
  repeated Instance instances = 1;
  Error erro = 2;
}

message StatsInput {
}

message StatsOutput {
  string token = 1;
  int64 n_in_memory = 2;
  repeated string tasks = 3;
}
